--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,8 @@
-# ____REMOVE THIS LINE AFTER RENAMING sample.env to .env ____
+
 DATABASE_URL=
-SESSION_ID=
+SESSION_ID=NoJjlT7B#6Hef5ACejCqiIZBpMH85Tkd6cPTBkGey3REKVkxbohU
 REMOVEBG_KEY=
 PREFIX=
 MODE=
 autoRead=
-statusview=
+statusview=true
